--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "solid-js": "^1.8.15",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
+    "tech-stack-icons": "2.1.0",
     "typescript": "^5.3.3"
   }
 }
